--- a/website/o3dv/css/dialogs.css
+++ b/website/o3dv/css/dialogs.css
@@ -161,7 +161,7 @@ div.ov_dialog div.ov_dialog_row
 div.ov_dialog div.ov_dialog_row_name
 {
 	width: 30%;
-	margin-top: 4px;
+	margin-top: 5px;
 	float: left;
 }
 
